--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
         <div id="scoreboard">Score: 0</div>
         <button id="restart-btn">Restart</button>
     </div>
+    <audio id="eatSound" src="eat.wav"></audio>
+    <audio id="hitWallSound" src="hit_wall.wav"></audio>
+    <audio id="gameOverSound" src="game_over.wav"></audio>
 </body>
 </html>
