--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <button id="restart-btn">Restart</button>
     </div>
     <audio id="eatSound" src="eat.wav"></audio>
-    <audio id="hitWallSound" src="hit_wall.wav"></audio>
-    <audio id="gameOverSound" src="game_over.wav"></audio>
+    <audio id="hitWallSound" src="hit_wall.mp3"></audio>
 </body>
 </html>
